--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   webview_flutter: ^4.10.0
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
