--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="flutter_webview_app"
+        android:label="webview tests"
         android:usesCleartextTraffic="true"
         android:name="${applicationName}"
-        android:icon="@mipmap/dajit_icon">
+        android:icon="@mipmap/nya">
         <activity
             android:name=".MainActivity"
             android:exported="true"
